# ah-api

./: .dockerignore  .env.example  .gitignore  CI-SETUP-SUMMARY.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker-publish.yml
app/: analytics_models.py  analytics_routes.py  analytics_service.py  client.py  config.py  database.py  db_models.py  main.py  models.py  product_client.py  product_models.py  product_routes.py  recommendation_models.py  recommendation_service.py  routes.py  sync_service.py
app/static/: analytics.html  index.html  receipts.html  recommendations.html
scripts/: README.md  dev-server.sh
tests/: __init__.py  conftest.py  test_analytics.py  test_health.py  test_products.py  test_receipts.py  test_recommendations.py
